# movie-booking-demo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
booking/: BookingService.cpp  CMakeLists.txt  Theater.cpp
booking/include/: BookingService.h  Theater.h
demo/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  MovieBookingWidget.cpp  MovieBookingWidget.ui  SeatsModel.cpp
gui/include/: MovieBookingWidget.h  SeatsModel.h
src/: CMakeLists.txt
tests/: BookingServiceTests.cpp  BookingServiceTests.h  CMakeLists.txt  TheaterTests.cpp  TheaterTests.h  main.cpp
